--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800');
 @import url('http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
-@import url('font-awesome.min.css');
+@import url('http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css');
 
 body {
   	font: 300 16px/1.5em "Open Sans";
